@@ -21,7 +21,6 @@ import org.apache.kafka.common.metrics.MetricConfig;
 import org.apache.kafka.common.metrics.Metrics;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -38,7 +37,7 @@ public class ProducerMetrics {
     }
 
     public static void main(String[] args) {
-        Map<String, String> metricTags = Collections.singletonMap("client-id", "client-id");
+        Map<String, String> metricTags = Map.of("client-id", "client-id");
         MetricConfig metricConfig = new MetricConfig().tags(metricTags);
         Metrics metrics = new Metrics(metricConfig);
 
